--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
       <img src="images/illustration-mockups.svg" alt="" id="screen">
     </div>
 
-    <section>
+    <section id="sec1">
 
       <h1>Build The Community Your Fans Will Love</h1>
 
       <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audienc. Create connections with your users as you engage in genuine discussion.</p>
 
       <a href="#">Register</a>
+    </section>
+
+    <section id="icons">
+
+      <a href="#"><img src="images/facebook.svg" alt="" class="icon"></a>
+      <a href="#"><img src="images/square-twitter.svg" alt="" class="icon"></a>
+      <a href="#"><img src="images/instagram.svg" alt="" class="icon"></a>
+
     </section>
   </main>
 </body>
