--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
     <section id="icons">
 
-      <a href="#"><img src="images/facebook.svg" alt="" class="icon"></a>
+      <a href="#"><img src="images/facebook.svg" alt="" class="icon" id="face"></a>
       <a href="#"><img src="images/square-twitter.svg" alt="" class="icon"></a>
       <a href="#"><img src="images/instagram.svg" alt="" class="icon"></a>
 
