--- a/index.html
+++ b/index.html
@@ -37,11 +37,27 @@
   
     <section id="icons">
 
-      <a href="#"><img src="images/facebook.svg" alt="" class="icon" id="face"></a>
-      <a href="#"><img src="images/square-twitter.svg" alt="" class="icon"></a>
-      <a href="#"><img src="images/instagram.svg" alt="" class="icon"></a>
+      <a href="#">
+        <span id="faces">
+          <i class="fa-brands fa-facebook-f" class="icon"></i>
+        </span>
+      </a>
+      
+      <a href="#">
+        <span id="twitter">
+          <i class="fa-brands fa-twitter" class="icon"></i>
+        </span>
+      </a>
+
+      <a href="#">
+        <span id="insta">
+          <i class="fa-brands fa-instagram" class="icon"></i>
+        </span>
+      </a>
 
     </section>
+    
 
+    <script src="https://kit.fontawesome.com/1c1df429ab.js" crossorigin="anonymous"></script>
 </body>
 </html>
